# agent-skills-creator

./: .gitignore  ARCHITECTURE-REVIEW.md  CHANGELOG.md  OPTIMIZATION_PLAN.md  README.md  SKILL.md  index.html  install.sh  package.json  pyproject.toml  results.tsv  skill-framework.md  triggers.json
.codex/: INSTALL.md
.github/: README.md  READMEDeploy.md
.opencode/: INSTALL.md
claude/: CLAUDE.md  skill-framework.md  skill-writer.md
cursor/: skill-writer.mdc
docs/: ARCHITECTURE.md  CRITICAL_ISSUES.md  README.md  REFACTORING-PLAN-v3.md  REFACTORING-PLAN.md  index.md
engine/: lib  main.sh  orchestrator.sh
eval/: BUGFIXES.md  DESIGN.md  RETROSPECTIVE.md  benchmarks.md  certifier.sh  main.sh  rubrics.md
evals/: evals.json
experimental/: gepa-optimize.py
gemini/: skill-writer.md
hermes/: skill-writer.md
kimi/: skill-writer.md
openai/: skill-writer.md
openclaw/: skill-writer.md
opencode/: skill-writer.md
optimize/: anti-patterns.md  strategies.md
paper/: agent_skill_engineering_paper.md  agent_skills_engineering.md  agent_skills_engineering_zh.md  experiments.md  methodology.md  paper.md  unified_skill_eval_paper.md
references/: CERTIFICATION.md  METRICS.md  SELF_OPTIMIZATION.md  SKILL_TYPE.md  owasp-ast10-checklist.md
refs/: progressive-disclosure.md  session-artifact.md  skill-graph.md  skill-registry.md  use-to-evolve.md
scripts/: autotuner.sh  check-version.py  fast-debate.sh  lean-orchestrator.sh  monitor_skill_drift.py  multi_agent_optimizer.sh  multi_agent_tester.py  parallel-evolution.sh  real_user_simulation.sh  run_aggregate.py  (+4 more)
(+232 files in other folders)
