[project]
name = "skill"
version = "2.15.0"
description = "Skill evaluation and management framework"
readme = "SKILL.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Skill Team" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
eval = [
    "lm-eval>=0.4.0",
    "deepspeed>=0.12.0",
    "accelerate>=0.27.0",
]

[project.scripts]
skill = "skill.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skill"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "DTZ", "T10", "ICN", "PIE", "PYI", "RSE", "RET", "SLF", "SIM", "TCH", "ARG", "PTH", "ERA", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
